feat: distribution pipeline — CI, release builds, install command, npm wrapper
- .github/workflows/ci.yml: lint (clippy), fmt check, test on push/PR
- .github/workflows/release.yml: 5 platform builds on tag, crates.io publish
- src/install.rs: `tilth --install <host>` writes MCP config
  Supports: claude-code, cursor, windsurf, claude-desktop
- npm/: wrapper package (postinstall downloads binary, run.js forwards args)
- Cargo.toml: add repository, readme, keywords, categories for crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 description = "Tree-sitter indexed lookups — smart code reading for AI agents"
 license = "MIT"
+repository = "https://github.com/jahala/tilth"
+readme = "README.md"
+keywords = ["mcp", "code-search", "tree-sitter", "developer-tools"]
+categories = ["command-line-utilities", "development-tools"]
 
 [[bin]]
 name = "tilth"
