--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ tree-sitter-java = "0.23"
 tree-sitter-c = "0.24"
 tree-sitter-cpp = "0.23"
 tree-sitter-ruby = "0.23"
+tree-sitter-haskell = "0.23"
+tree-sitter-rescript = { git = "https://github.com/rescript-lang/tree-sitter-rescript" }
 
 # Search (ripgrep internals)
 grep-regex = "0.1"
