GREEN: test(map): add cargo-insta snapshot tests for map tool
Add comprehensive snapshot tests validating map output across 12 languages
(Rust, TypeScript, TSX, JS, Python, Go, Java, C, C++, Ruby, Haskell, ReScript)
plus non-code files (Dockerfile, Makefile).

- Add insta dev dependency for snapshot testing
- Create polyglot-project fixtures with minimal parseable code
- Test three scenarios: full map, depth-limited, budget-limited
- Validate symbol extraction and token estimation

All 42 tests pass (39 existing + 3 new snapshot tests).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,9 @@ toml = "0.8"
 # MCP protocol (JSON-RPC over stdio)
 # (handled manually — no framework needed)
 
+[dev-dependencies]
+insta = "1.41"
+
 
 [profile.release]
 opt-level = 3
